[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heed = "0.20.5"
anyhow = "1.0.89"
ulid = { version = "1.1.3", features = ["default", "serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
mockall = "0.13.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

