[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
storage = { path = "../storage" }
anyhow = "1.0.89"
heed = "0.20.5" #How to abstract but have ownership of env and wtxn at main level
ulid = { version = "1.1.3", features = ["default", "serde"]}
